code clean, form validation, css

--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>TREZOR Convert BTC to BCC</title>
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
+    <title>TREZOR Claim Bitcoin Cash</title>
+    <meta name="description" content="Tool for clam Bitcon Cash" />
+    <meta name="keywords" content="Trezor, Bitcoin, Bitcoin Cash, Claim" />
     <meta name="author" content="TREZOR info@trezor.io" />
     <meta name="robots" content="index, follow" />
-    <meta name="title" content="TREZOR Connect" />
-    <meta name="theme-color" content="#ffffff" />
+    <meta name="title" content="TREZOR Claim Bitcoin Cash" />
     <!-- TODO  tw, fb-->
     <meta name="twitter:card" content="summary" />
 </head>
