--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,8 @@
     <div id="app"></div>
     <!-- <script type="text/javascript" src="https://connect.trezor.io/2/connect.js"></script> -->
     <script type="text/javascript">
+        window.TREZOR_INSIGHT_URLS = ['https://bch-bitcore2.trezor.io/api/'];
+        
         window.TREZOR_POPUP_PATH = 'http://localhost/';
         window.TREZOR_POPUP_URL = 'http://localhost/popup/popup.html';
         window.TREZOR_POPUP_ORIGIN = 'http://localhost';
