--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Recover your bitcoins | TREZOR</title>
-    <meta name="description" content="Safely claim Bcash (BCH) to your TREZOR." />
+    <title>Recover your Bitcoins | TREZOR</title>
+    <meta name="description" content="Safely recover your Bitcoins to your TREZOR." />
     <meta name="keywords" content="Trezor, Bitcoin, Bitcoin Cash, Bcash, BCH, Claim" />
     <meta name="author" content="TREZOR info@trezor.io" />
     <meta name="robots" content="index, follow" />
-    <meta name="title" content="Recover your bitcoins | TREZOR" />
+    <meta name="title" content="Recover your Bitcoins | TREZOR" />
     <link rel="icon" type="image/png" href="favicon.png">
     <!--[if IE]><link rel="shortcut icon" href="favicon.ico"/><![endif]-->
 
     <meta property="og:type" content="product" />
     <meta property="fb:page_id" content="198891850249377" />
-    <meta property="og:title" content="Recover your bitcoins | TREZOR" />
+    <meta property="og:title" content="Recover your Bitcoins | TREZOR" />
     <meta property="og:image" content="https://trezor.io/static/images/trezor_social01.jpg" />
-    <meta property="og:description" content="Safely recover your bitcoins to your TREZOR." />
+    <meta property="og:description" content="Safely recover your Bitcoins to your TREZOR." />
     <meta property="og:url" content="https://trezor.io/" />
     <meta property="product:brand" content="TREZOR" />
     <meta property="product:category" content="Electronics" />
@@ -28,8 +28,8 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@BitcoinTrezor">
     <meta name="twitter:creator" content="@BitcoinTrezor">
-    <meta name="twitter:title" content="Recover your bitcoins | TREZOR">
-    <meta name="twitter:description" content="Safely recover your bitcoins to your TREZOR." />
+    <meta name="twitter:title" content="Recover your Bitcoins | TREZOR">
+    <meta name="twitter:description" content="Safely recover your Bitcoins to your TREZOR." />
     <meta name="twitter:image:src" content="https://trezor.io/static/images/trezor_social01.jpg">
     <meta name="twitter:domain" content="https://trezor.io/">
 	
@@ -39,9 +39,9 @@
     <div id="app"></div>
     <script type="text/javascript">
         window.TREZOR_POPUP_ORIGIN = 'https://connect.trezor.io';
-        window.TREZOR_POPUP_PATH = 'https://connect.trezor.io/claim-bch-e3319a7/';
-        window.TREZOR_POPUP_URL = 'https://connect.trezor.io/claim-bch-e3319a7/popup/popup.html';        
+        window.TREZOR_POPUP_PATH = window.TREZOR_POPUP_ORIGIN + '/claim-bch-40210ff/';
+        window.TREZOR_POPUP_URL = window.TREZOR_POPUP_PATH + 'popup/popup.html';
     </script>
-    <script type="text/javascript" src="https://connect.trezor.io/claim-bch-e3319a7/connect.js"></script>  
+    <script type="text/javascript" src="https://connect.trezor.io/claim-bch-40210ff/connect.js"></script> 
 </body>
 </html>
