--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Claim Bcash | TREZOR</title>
-    <meta name="description" content="Safely claim Bcash (BCH) to your TREZOR." />
+    <title>Claim Bitcoin Cash (Bcash) | TREZOR</title>
+    <meta name="description" content="Safely claim Bitcoin Cash (Bcash) to your TREZOR." />
     <meta name="keywords" content="Trezor, Bitcoin, Bitcoin Cash, Bcash, BCH, Claim" />
     <meta name="author" content="TREZOR info@trezor.io" />
     <meta name="robots" content="index, follow" />
-    <meta name="title" content="Claim Bcash | TREZOR" />
+    <meta name="title" content="Claim Bitcoin Cash (Bcash) | TREZOR" />
     <link rel="icon" type="image/png" href="favicon.png">
     <!--[if IE]><link rel="shortcut icon" href="favicon.ico"/><![endif]-->
 
     <meta property="og:type" content="product" />
     <meta property="fb:page_id" content="198891850249377" />
-    <meta property="og:title" content="Claim Bcash | TREZOR" />
+    <meta property="og:title" content="Claim Bitcoin Cash (Bcash) | TREZOR" />
     <meta property="og:image" content="https://trezor.io/static/images/trezor_social01.jpg" />
-    <meta property="og:description" content="Safely claim Bcash (BCH) to your TREZOR." />
+    <meta property="og:description" content="Safely claim Bitcoin Cash (Bcash) to your TREZOR." />
     <meta property="og:url" content="https://trezor.io/" />
     <meta property="product:brand" content="TREZOR" />
     <meta property="product:category" content="Electronics" />
@@ -28,8 +28,8 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@BitcoinTrezor">
     <meta name="twitter:creator" content="@BitcoinTrezor">
-    <meta name="twitter:title" content="Claim Bcash | TREZOR">
-    <meta name="twitter:description" content="Safely claim Bcash (BCH) to your TREZOR." />
+    <meta name="twitter:title" content="Claim Bitcoin Cash (Bcash) | TREZOR">
+    <meta name="twitter:description" content="Safely claim Bitcoin Cash (Bcash) to your TREZOR." />
     <meta name="twitter:image:src" content="https://trezor.io/static/images/trezor_social01.jpg">
     <meta name="twitter:domain" content="https://trezor.io/">
 	
