--- a/src/index.html
+++ b/src/index.html
@@ -40,9 +40,9 @@
     <script type="text/javascript">
         window.TREZOR_INSIGHT_URLS = ['https://bch-bitcore2.trezor.io/api'];
         window.TREZOR_POPUP_ORIGIN = 'https://connect.trezor.io';
-        window.TREZOR_POPUP_PATH = 'https://connect.trezor.io/claim-bch-e3319a7/';
-        window.TREZOR_POPUP_URL = 'https://connect.trezor.io/claim-bch-e3319a7/popup/popup.html';        
+        window.TREZOR_POPUP_PATH = window.TREZOR_POPUP_ORIGIN + '/claim-bch-f67918e/';
+        window.TREZOR_POPUP_URL = window.TREZOR_POPUP_PATH + 'popup/popup.html';
     </script>
-    <script type="text/javascript" src="https://connect.trezor.io/claim-bch-e3319a7/connect.js"></script>  
+    <script type="text/javascript" src="https://connect.trezor.io/claim-bch-f67918e/connect.js"></script>  
 </body>
 </html>
